[package]
name = "rrequests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rrequests"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = [] }
reqwest = { version = "0.12.7", features = ["blocking", "json", "multipart"] }
serde_json = "1.0.125"
